--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+		<!-- DEPENDENCIES I HAVE ADDED -->
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>buhtig.steve,nergetracker.Application</start-class>
+		<start-class>buhtig.steve.mergetracker.Application</start-class>
 		<java.version>1.7</java.version>
 	</properties>
 
