Added a second implementation of the data provider so need to change to us a factory to set

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.thymeleaf.cache=false
+
+
+#
+# Use Test Data or the Subversion provider
+#
+revisiondata.provider=testDataProvider
+#revisiondata.provider=subversionProvider
+revisiondata.url=
