Test using apache commons configuration for the config propertes so that each application can specify the url / branches etc.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.thymeleaf.cache=false
 revisiondata.provider=testDataProvider
 #revisiondata.provider=subversionProvider
 revisiondata.url=
+
+
+applications=test1,Test2
