--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 			<version>3.2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
