--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 spring.thymeleaf.cache=false
 
 
-#
-# Use Test Data or the Subversion provider
-#
-revisiondata.provider=testDataProvider
-#revisiondata.provider=subversionProvider
-revisiondata.url=
 
-
-applications=test1,Test2
+application.schedule.fixedDelay=60000
+application.schedule.initialDelay=60000
